--- a/fern/docs/pages/get-started/phone-numbers.mdx
+++ b/fern/docs/pages/get-started/phone-numbers.mdx
@@ -8,7 +8,8 @@ jambonz to any carrier or SIP PBX.  And it allows you to use your existing phone
 already purchased from your SIP trunking/DID provider.
 
 These phone numbers however must be provisioned on jambonz if you want to route different calls to 
-different applications based on phone numbers.  So after [creating a carrier](/guides/using-the-jambonz-portal/basic-concepts/creating-carriers),
+different applications based on phone numbers.  So after 
+[creating a carrier](/guides/using-the-jambonz-portal/basic-concepts/creating-carriers),
 the next step is to provision the phone numbers that you will be receiving calls on from that carrier.
 
 To provision a phone number, select Phone Numbers from the lefthand navigation and click the '+' sign to 
@@ -27,4 +28,4 @@ that you want calls to route to when your customers call this number.  Click Sav
 </Frame>
 
 Want to learn more about how incoming calls are routed to applications in jambonz?
-Check out [this article](/guides/using-the-jambonz-portal/basic-concepts/how-inbound-call-routing-works).
+Check out [this article](/guides/using-the-jambonz-portal/advanced-concepts/inbound-call-routing).
