--- a/fern/docs/pages/verbs/say.mdx
+++ b/fern/docs/pages/verbs/say.mdx
@@ -29,6 +29,7 @@ subtitle: Generate text-to-speech audio.
 
 <ParamField path="streaming" type="boolean" required={false}>
   If set to true streaming text input is enabled.
+</ParamField>
 
 <ParamField path="synthesizer.gender" type="string" required={false}>
   (Google only) `MALE`, `FEMALE`, or `NEUTRAL`.
@@ -40,7 +41,7 @@ subtitle: Generate text-to-speech audio.
 
 <ParamField path="synthesizer.vendor" type="string" required={false}>
   Speech vendor to use (see list below, along with any others added via the  
-  [custom speech API](/guides/speech-providers/custom-speech-api)).
+  [custom speech API](/guides/features/adding-speech-providers)).
 </ParamField>
 
 <ParamField path="synthesizer.voice" type="string" required={false}>
