fix image scaling

--- a/fern/docs/pages/get-started/concepts.mdx
+++ b/fern/docs/pages/get-started/concepts.mdx
@@ -104,7 +104,7 @@ has a Chrome extension that allows you to make webRTC calls directly
 from your browser; this is a great way for developers to easily test their applications while they are developing them.
 
 <Frame caption="Webrtc clients are supported">
-  <img src="../../assets/images/chrome-dialer.jpg" alt="Webphone" width="500"/>
+  <img src="../../assets/images/chrome-dialer.jpg" alt="Webphone"/>
 </Frame>
 
 
