--- a/fern/docs/pages/verbs/recognizer.mdx
+++ b/fern/docs/pages/verbs/recognizer.mdx
@@ -5,6 +5,12 @@ subtitle: A **property** that can be used in `gather`, `transcribe` or other ver
 
 ## Parameters
 
+
+<ParamField path="vendor" type="string" required={true}>
+  Speech vendor to use (see list below, along with any others you add via the  
+  [custom speech API](/guides/features/adding-speech-providers)).
+</ParamField>
+
 <ParamField path="altLanguages" type="array" required={false}>
   (Google, Microsoft) An array of alternative languages that the speaker may be using.
 </ParamField>
@@ -140,11 +146,6 @@ subtitle: A **property** that can be used in `gather`, `transcribe` or other ver
 
 <ParamField path="vad.voiceMs" type="number" required={false}>
   If `vad` is enabled, the number of milliseconds of speech required before connecting to the cloud recognizer.
-</ParamField>
-
-<ParamField path="vendor" type="string" required={false}>
-  Speech vendor to use (see list below, along with any others you add via the  
-  [custom speech API](/guides/features/adding-speech-providers)).
 </ParamField>
 
 <ParamField path="vocabularyFilterName" type="string" required={false}>
