vendors lower case

--- a/fern/docs/pages/verbs/gather.mdx
+++ b/fern/docs/pages/verbs/gather.mdx
@@ -14,7 +14,7 @@ subtitle: Collect dtmf or speech input
   "numDigits": 5,
   "timeout": 8,
   "recognizer": {
-    "vendor": "Google",
+    "vendor": "google",
     "language": "en-US",
     "hints": ["sales", "support"],
     "hintsBoost": 10
