--- a/fern/docs/pages/verbs/recognizer.mdx
+++ b/fern/docs/pages/verbs/recognizer.mdx
@@ -9,6 +9,7 @@ subtitle: A **property** that can be used in `gather`, `transcribe` or other ver
 <ParamField path="vendor" type="string" required={true}>
   Speech vendor to use (see list below, along with any others you add via the  
   [custom speech API](/guides/features/adding-speech-providers)).
+  Note: this field is case sensitve, all the built-in vendors are lower case eg `aws` not `AWS`
 </ParamField>
 
 <ParamField path="altLanguages" type="array" required={false}>
