--- a/fern/docs/pages/verbs/transcribe.mdx
+++ b/fern/docs/pages/verbs/transcribe.mdx
@@ -12,7 +12,7 @@ The transcribe verb may appear on its own or as a nested verb within a dial or l
   "verb": "transcribe",
   "transcriptionHook": "http://example.com/transcribe",
   "recognizer": {
-    "vendor": "Google",
+    "vendor": "google",
     "language" : "en-US",
     "interim": true
   }
